product content included

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <button class="btn btn-outline  btn-success hover lg:visible "><a class="hover:text-white">Login</a></button>
             <button class="btn btn-success text-white lg:visible">Register</button>
            </div>
-           <button class="  lg:hidden lg:mr-0 ">
+           <button class="  lg:hidden  lg:mr-0 ">
             <i class="fa-solid fa-bars "></i>
           </button>
         </div>
@@ -70,10 +70,12 @@
         </div>
        </section>
     </header>
-    <main class="container mx-auto">
-     <section class="services my-36">
+    <main class="">
+     <section class="services container mx-auto my-36">
       <div class="">
-        <div class="font-semibold text-[#179800] text-3xl ">Services</div>
+        <div >
+            <h2 class="font-semibold text-[#179800] text-3xl ">Services</h2>
+            </div>
       </div>
       <div class="grid grid-cols-1 w-full lg:grid-cols-3 mt-12 gap-y-6">
         <div class="card card-compact bg-[#EFEBE3] w-full lg:w-96 p-4 shadow-xl lg:p-9">
@@ -105,7 +107,8 @@
                 <p>We ensure quick and efficient delivery of our products, reaching you in the shortest time possible. With a reliable logistics system and dedicated team</p>
               </div>
             </div>
-          </div> <div class="card card-compact bg-[#EFEBE3] w-full lg:w-96 shadow-xl p-9">
+          </div> 
+          <div class="card card-compact bg-[#EFEBE3] w-full lg:w-96 shadow-xl p-9">
             <figure>
             <div class="h-36 w-36 rounded-full bg-white ">
                 <img class="w-24 mx-auto mt-6 "
@@ -123,6 +126,187 @@
           
       </div>
      </section>
+     <!-- product content -->
+      <section class="products bg-[#EFEBE3] pb-36">
+    <div class="container mx-auto">
+        <!-- product head -->
+        <div class="">
+            <h2 class="font-semibold text-[#179800] text-3xl pt-36 pb-10" >Popular Products</h2>
+         </div>
+         <!-- product card -->
+          <div class="lg:flex w-full gap-x-4">
+            <div>
+                <div class="card bg-base-100  shadow-xl bg-gradient-to-t from-green-200 via-green-300 to-green-500 ">
+                    <div class="card-body">
+                      <h2 class="card-title text-white font-bold text-2xl py-8">30% 0ff</h2>
+                      <p class="text-[#111111] text-xl py-6">Shop your daily essentials at unbeatable prices. From fresh produce to pantry</p>
+                      <button class="btn w-28">Buy Now</button>
+                    </div>
+                    <figure>
+                      <img class="ml-8 "
+                        src="assets/vegetable-offer.png"
+                        alt="image of our product" />
+                    </figure>
+                  </div>
+            </div>
+            <div class="grid grid-cols-2 lg:grid-cols-3 lg:grid-rows-3 gap-x-4 gap-y-4 lg:w-4/5 ml-2 mr-2">
+                <div class="card card-side bg-base-100 shadow-xl">
+                    <figure>
+                      <img class="ml-6"
+                        src="assets/onion.png"
+                        alt="onion" />
+                    </figure>
+                    <div class="card-body">
+                      <div class="">
+                        <span><i class="fa-solid fa-star text-[#FFC107]"></i></span>
+                        <span class="text-[#111111] text-lg">4.5</span>
+                      </div>
+                      <h3 class="text-[#111111] text-xl font-semibold">Onion 1 Kg</h3>
+                      <div class="card-actions justify-end">
+                      <p>$39.99</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card card-side bg-base-100 shadow-xl">
+                    <figure>
+                      <img class="ml-6"
+                        src="assets/tomato.png"
+                        alt="tomato" />
+                    </figure>
+                    <div class="card-body">
+                      <div class="">
+                        <span><i class="fa-solid fa-star text-[#FFC107]"></i></span>
+                        <span class="text-[#111111] text-lg">4.5</span>
+                      </div>
+                      <h3 class="text-[#111111] text-xl font-semibold">Tomato 500 g</h3>
+                      <div class="card-actions justify-end">
+                      <p>$39.99</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card card-side bg-base-100 shadow-xl">
+                    <figure>
+                      <img class="ml-6"
+                        src="assets/potato.png"
+                        alt="potato" />
+                    </figure>
+                    <div class="card-body">
+                      <div class="">
+                        <span><i class="fa-solid fa-star text-[#FFC107]"></i></span>
+                        <span class="text-[#111111] text-lg">4.5</span>
+                      </div>
+                      <h3 class="text-[#111111] text-xl font-semibold">Potato 1 Kg</h3>
+                      <div class="card-actions justify-end">
+                      <p>$39.99</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card card-side bg-base-100 shadow-xl">
+                    <figure>
+                      <img class="ml-6"
+                        src="assets/tomato.png"
+                        alt="tomato" />
+                    </figure>
+                    <div class="card-body">
+                      <div class="">
+                        <span><i class="fa-solid fa-star text-[#FFC107]"></i></span>
+                        <span class="text-[#111111] text-lg">4.5</span>
+                      </div>
+                      <h3 class="text-[#111111] text-xl font-semibold">Tomato 500 g</h3>
+                      <div class="card-actions justify-end">
+                      <p>$39.99</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card card-side bg-base-100 shadow-xl">
+                    <figure>
+                      <img class="ml-6"
+                        src="assets/onion.png"
+                        alt="onion" />
+                    </figure>
+                    <div class="card-body">
+                      <div class="">
+                        <span><i class="fa-solid fa-star text-[#FFC107]"></i></span>
+                        <span class="text-[#111111] text-lg">4.5</span>
+                      </div>
+                      <h3 class="text-[#111111] text-xl font-semibold">Onion 1 Kg</h3>
+                      <div class="card-actions justify-end">
+                      <p>$39.99</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card card-side bg-base-100 shadow-xl">
+                    <figure>
+                      <img class="ml-6"
+                        src="assets/tomato.png"
+                        alt="tomato" />
+                    </figure>
+                    <div class="card-body">
+                      <div class="">
+                        <span><i class="fa-solid fa-star text-[#FFC107]"></i></span>
+                        <span class="text-[#111111] text-lg">4.5</span>
+                      </div>
+                      <h3 class="text-[#111111] text-xl font-semibold">Tomato 500 g</h3>
+                      <div class="card-actions justify-end">
+                      <p>$39.99</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card card-side bg-base-100 shadow-xl">
+                    <figure>
+                      <img class="ml-6"
+                        src="assets/onion.png"
+                        alt="onion" />
+                    </figure>
+                    <div class="card-body">
+                      <div class="">
+                        <span><i class="fa-solid fa-star text-[#FFC107]"></i></span>
+                        <span class="text-[#111111] text-lg">4.5</span>
+                      </div>
+                      <h3 class="text-[#111111] text-xl font-semibold">Onion 1 Kg</h3>
+                      <div class="card-actions justify-end">
+                      <p>$39.99</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card card-side bg-base-100 shadow-xl">
+                    <figure>
+                      <img class="ml-6"
+                        src="assets/potato.png"
+                        alt="potato" />
+                    </figure>
+                    <div class="card-body">
+                      <div class="">
+                        <span><i class="fa-solid fa-star text-[#FFC107]"></i></span>
+                        <span class="text-[#111111] text-lg">4.5</span>
+                      </div>
+                      <h3 class="text-[#111111] text-xl font-semibold">Potato 1 Kg</h3>
+                      <div class="card-actions justify-end">
+                      <p>$39.99</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card card-side bg-base-100 shadow-xl invisible lg:visible">
+                    <figure>
+                      <img class="ml-6"
+                        src="assets/potato.png"
+                        alt="onion" />
+                    </figure>
+                    <div class="card-body">
+                      <div class="">
+                        <span><i class="fa-solid fa-star text-[#FFC107]"></i></span>
+                        <span class="text-[#111111] text-lg">4.5</span>
+                      </div>
+                      <h3 class="text-[#111111] text-xl font-semibold">Potato 1 Kg</h3>
+                      <div class="card-actions justify-end">
+                      <p>$39.99</p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+          </div>
+    </div>
+      </section>
     </main>
     <footer>
 
