--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
             <div class="text-center">
                 <!-- banner text -->
                 <div class="mt-32">
+                    <div class="text-center">
+                        <div class="mx-auto w-full max-w-sm rounded-md p-4">
+                            <div class="flex flex-col animate-pulse ml-32">
+                              <div class="size-20 rounded-full bg-green-800 pt-4 pl-4 ">
+                                <img src="assets/logo.png" alt="">
+                              </div>
+                               
+                            </div>
+                          </div>
+                    </div>
                     <h1 class="font-semibold text-6xl text-[#111111]">Freshness <span
                             class="font-semibold text-6xl text-[#179800]"> You Can<br>
                             Count</span> On, Prices You’ll Love!</h1>
