additional things and checking done

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="bg-linear-to-t from-base-300 to-base-500 bg-[#EFEBE3]">
         <!-- navbar starts -->
         <nav class="container mx-auto pt-10 border-b-2 border-[#179800] lg:border-hidden">
-            <div class="grid grid-cols-3 items-center justify-between">
+            <div class="grid grid-cols-3 items-center lg:justify-between">
                 <div class="">
                     <img class="hidden lg:block" src="assets/logo-header.png" alt="image of logo">
                     <img class="block lg:hidden ml-4 lg:ml-0" src="assets/logo.png" alt="logo for smaller device">
@@ -60,8 +60,8 @@
                                 class="hover:text-white">Login</a></button>
                         <button class="btn btn-success text-white lg:visible">Register</button>
                     </div>
-                    <button class="  lg:hidden  lg:mr-0 ">
-                        <i class="fa-solid fa-bars "></i>
+                    <button class="  lg:hidden pl-8 ">
+                        <i class="fa-solid fa-bars text-green-500"></i>
                     </button>
                 </div>
             </div>
@@ -80,10 +80,10 @@
                             </div>
                           </div>
                     </div>
-                    <h1 class="font-semibold text-6xl text-[#111111]">Freshness <span
-                            class="font-semibold text-6xl text-[#179800]"> You Can<br>
+                    <h1 class="font-semibold text-4xl lg:text-6xl text-[#111111]">Freshness <span
+                            class="font-semibold text-4xl lg:text-6xl text-[#179800]"> You Can<br>
                             Count</span> On, Prices You’ll Love!</h1>
-                    <p class="text-xl text-[#111111] pt-8 pb-9">Shop your daily essentials at unbeatable prices. From
+                    <p class="text-sm lg:text-xl text-[#111111] pt-8 pb-9">Shop your daily essentials at unbeatable prices. From
                         fresh produce to pantry<br>staples, we’ve got you covered every day!</p>
                 </div>
                 <!-- banner image -->
@@ -99,7 +99,7 @@
         <section class="services container mx-auto my-24 lg:my-36 ">
             <div class="">
                 <div>
-                    <h2 class="font-semibold text-[#179800] text-3xl ">Services</h2>
+                    <h2 class="font-semibold text-[#179800] text-2xl lg:text-4xl ">Services</h2>
                 </div>
             </div>
             <div class="grid grid-cols-1 w-full lg:grid-cols-3 mt-12 gap-y-6">
@@ -153,7 +153,7 @@
             <div class="container mx-auto">
                 <!-- product head -->
                 <div class="pt-36 ">
-                    <h2 class="font-semibold text-[#179800] text-3xl pb-10">Popular Products</h2>
+                    <h2 class="font-semibold text-[#179800] text-2xl lg:text-4xl pb-10">Popular Products</h2>
                 </div>
                 <!-- product card -->
                 <div class="lg:flex w-full gap-x-4 ">
@@ -314,7 +314,7 @@
         <!-- Our Packages -->
         <section class="packages container mx-auto">
             <div class="pt-36 ">
-                <h2 class="font-semibold text-[#179800] text-3xl pb-10"> Our Packages</h2>
+                <h2 class="font-semibold text-[#179800] text-2xl lg:text-4xl pb-10"> Our Packages</h2>
             </div>
         <div class="grid  lg:grid-cols-4 gap-x-6 gap-y-6">
             <div class="">
@@ -418,7 +418,7 @@
         <!-- arrival and offers -->
         <section class="arrival container mx-auto">
             <div class="">
-                <h2 class="font-semibold text-[#179800] text-3xl pt-36 pb-10">Arrival & Offers</h2>
+                <h2 class="font-semibold text-[#179800] text-2xl lg:text-4xl pt-36 pb-10">Arrival & Offers</h2>
             </div>
             <!--arrival card-->
             <div class="lg:flex gap-x-4 font-poppins pb-40">
@@ -455,7 +455,7 @@
                 <img src="assets/vegetable-busket.png" alt="image of vegetable busket">
             </div>
             <div class="lg:mr-16 text-center lg:text-left">
-                <h2 class="font-semibold text-[#179800] lg:text-[#111111] text-2xl lg:text-3xl pb-5">Get Grocery News!</h2>
+                <h2 class="font-semibold text-[#179800] lg:text-[#111111] text-2xl lg:text-4xl  pb-5">Get Grocery News!</h2>
                 <p class="text-xl text-[#111111] pb-9">Exclusive training tips, ticks, product deals and more.</p>
                 <input class="lg:w-full h-16 pl-3" type="email" placeholder="Enter E-mail..."><br>
                 <button class="btn btn-success text-white lg:visible mt-5">Subscribe</button>
@@ -466,18 +466,18 @@
     <footer class="bg-[#179800] pt-80 pb-28 lg:pb-36 -mt-60  ">
       <div class="grid grid-cols-1 lg:grid-cols-3 container mx-auto">
         <div>
-            <img src="assets/logo-footer.png" alt="footer logo">
-            <p class="text-xl text-white opacity-25 pb-6 lg:pb-0">Discover a world of treats, toys, and<br> essentials handpicked for your furry<br> friends</p>
+            <img class="w-24 lg:w-40" src="assets/logo-footer.png" alt="footer logo">
+            <p class="text-lg  lg:text-xl text-white opacity-25 pb-6 lg:pb-0">Discover a world of treats, toys, and<br> essentials handpicked for your furry<br> friends</p>
         </div>
         <div class="">
             <ul>
-                <li class="text-[#EFEBE3] text-xl"><a href="">Product</a></li>
-                <li class="text-[#EFEBE3] text-xl py-8" ><a href="">Services</a></li>
-                <li class="text-[#EFEBE3] text-xl"><a href="">Contact Us</a></li>
+                <li class="text-[#EFEBE3] text-lg lg:text-xl"><a href="">Product</a></li>
+                <li class="text-[#EFEBE3] text-lg lg:text-xl py-8" ><a href="">Services</a></li>
+                <li class="text-[#EFEBE3] text-lg lg:text-xl"><a href="">Contact Us</a></li>
             </ul>
         </div>
         <div class="pt-10 text-white">
-            <p>Follow us</p>
+            <p class="text-sm lg:text-lg mb-3">Follow us</p>
             <div class="flex gap-x-4">
                 <i class="fa-brands fa-facebook"></i>
                 <i class="fa-brands fa-square-instagram"></i>
